UI z-index fix

--- a/src/App.scss
+++ b/src/App.scss
@@ -363,7 +363,7 @@ footer {
 }
 
 .loading {
-  z-index: 10;
+  z-index: 11;
   position: absolute;
   width: 100%;
   height: 100%;
